--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,9 @@
       href="https://cdn.freecodecamp.org/universal/favicons/favicon-16x16.png"
     />
     <link href="/public/style.css" rel="stylesheet" type="text/css" />
+    <!-- CSS only -->
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
 
   <body>
@@ -23,17 +26,55 @@
             <input type="submit" value="POST URL" />
           </fieldset>
         </form>
+        <h3>Example</h3>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Type</th>
+              <th scope="col">Input/Result</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">URL</th>
+              <td>https://www.freecodecamp.org</td>
+            </tr>
+            <tr>
+              <th scope="row">jSON</th>
+              <td>{ "original_url":"https://www.freecodecamp.org","short_url":3343 }</td>
+            </tr>
+          </tbody>
+        </table>
+         <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Type</th>
+              <th scope="col">Input/Result</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">URL</th>
+              <td><a href="https://boilerplate-project-urlshortener-1.gitsumakwel.repl.co/api/shorturl/3343" target="_blank">[page url]/api/shorturl/3343</a></td>
+            </tr>
+            <tr>
+              <th scope="row">Webpage</th>
+              <td>https://www.freecodecamp.org</td>
+            </tr>
+          </tbody>
+        </table>
       </section>
       <script>
-          const path = window.location.pathname.toString();    
-          console.log(path);      
+          const path = window.location.pathname.toString();
+          console.log(path);
           if (path === '/') document.getElementById('shorturl').action = 'api/shorturl';
           else document.getElementById('shorturl').action = '../api/shorturl';
 
       </script>
     </main>
     <footer>
-      <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
+      <p>by <a href="https://www.freecodecamp.org/fcc8364894f-a1fb-48d0-b196-69fac43ef89d">Brill Jasper Amisola Rayel</a></p>
+      <p>Template by <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
     </footer>
   </body>
 </html>
