--- a/public/style.css
+++ b/public/style.css
@@ -18,8 +18,6 @@ h3 {
   margin-top: 30px;
 }
 
-
-
 .user-stories li {
   margin-bottom: 1em;
 }
@@ -57,5 +55,8 @@ section {
 }
 table {
   border-spacing: 30px;
-
+  margin-top: 30px;
+}
+th {
+  width: 70px;
 }
