--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
           </fieldset>
         </form>
         <h3>Example</h3>
-        <table class="table table-hover">
+        <table class="table table-striped table-hover table-bordered">
           <thead>
             <tr>
               <th scope="col">Type</th>
@@ -45,7 +45,7 @@
             </tr>
           </tbody>
         </table>
-         <table class="table table-hover">
+         <table class="table table-striped table-hover table-bordered">
           <thead>
             <tr>
               <th scope="col">Type</th>
