Git commit index.html update

--- a/views/index.html
+++ b/views/index.html
@@ -55,11 +55,11 @@
           <tbody>
             <tr>
               <th scope="row">URL</th>
-              <td><a href="https://boilerplate-project-urlshortener-1.gitsumakwel.repl.co/api/shorturl/3343" target="_blank">[page url]/api/shorturl/3343</a></td>
+              <td><a href="https://www.freecodecamp.org/fcc8364894f-a1fb-48d0-b196-69fac43ef89d" target="_blank">[page url]/api/shorturl/87298</a></td>
             </tr>
             <tr>
               <th scope="row">Webpage</th>
-              <td>https://www.freecodecamp.org</td>
+              <td>https://www.freecodecamp.org/fcc8364894f-a1fb-48d0-b196-69fac43ef89d</td>
             </tr>
           </tbody>
         </table>
