--- a/views/index.html
+++ b/views/index.html
@@ -55,7 +55,7 @@
           <tbody>
             <tr>
               <th scope="row">URL</th>
-              <td><a href="https://www.freecodecamp.org/fcc8364894f-a1fb-48d0-b196-69fac43ef89d" target="_blank">[page url]/api/shorturl/87298</a></td>
+              <td><a href="https://boilerplate-project-urlshortener-1.gitsumakwel.repl.co/api/shorturl/87298" target="_blank">[page url]/api/shorturl/87298</a></td>
             </tr>
             <tr>
               <th scope="row">Webpage</th>
